# tensor-compiler

./: .gitignore  CMakeLists.txt  README.md
.sisyphus/: boulder.json
.sisyphus/drafts/: tensor-compiler-mlir-modular.md
.sisyphus/evidence/: task-0-ptxas-version.txt
.sisyphus/notepads/tensor-compiler-mlir-modular/: decisions.md  learnings.md
.sisyphus/plans/: tensor-compiler-mlir-modular.md
benchmarks/: benchmark.py  matmul_relu.mlir
include/TensorOps/: TensorOpsDialect.h  TensorOpsDialect.td  TensorOpsOps.h  TensorOpsOps.td  TensorOpsPasses.h
lib/: CMakeLists.txt  LowerTensorOpsToLLVM.cpp  LowerTensorOpsToNVVM.cpp  LowerTensorOpsToROCDL.cpp  TensorOpsDialect.cpp  TensorOpsOps.cpp  TensorOpsPasses.cpp
lib/Conversion/: TensorOpsToLinalg.cpp
lib/Fusion/: FuseMatmulRelu.cpp
scripts/: compile_ptx.sh  run_gpu.sh
tests/: CMakeLists.txt  conversion.mlir  cpu_lowering.mlir  fusion.mlir  gpu_nvvm.mlir  gpu_rocdl.mlir  lit.cfg.py  lit.site.cfg.py.in  smoke.mlir
tools/gpu-runner/: CMakeLists.txt  gpu-runner.cpp
tools/tensor-opt/: CMakeLists.txt  tensor-opt.cpp
tools/tensor-runner/: CMakeLists.txt  tensor-runner.cpp
